feat: class pages

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 
 </html>
