feat: filter ratings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>My Class</title>
 </head>
 
-<body>
+<body class="font-serif">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://player.vimeo.com/api/player.js"></script>
